--- a/.env_example
+++ b/.env_example
@@ -1,3 +1,3 @@
 DATABASE_URL=mysql://username:password@localhost/person_demo
 #DATABASE_URL=postgres://username:password@localhost/person_demo
-#DATABASE_URL=postgres://username:password@localhost/person_demo
+#DATABASE_URL=file:///path/to/person_demo.sqlite3
