--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "person_rust_skeleton"
-version = "0.0.3"
+version = "0.0.4"
 authors = ["Michael Cummings <dragonrun1@gmail.com>"]
 description = "Skeleton for common person database tables in MySQL, PostgreSQL, and SQLite."
 edition = "2018"
@@ -11,11 +11,14 @@ homepage = "https://github.com/Dragonrun1/person_rust_skeleton"
 readme = "README.md"
 repository = "https://github.com/Dragonrun1/person_rust_skeleton"
 
-
 [dependencies]
-diesel = "1.4.5"
-diesel_derives = "1.4.1"
-dotenv = "0.15.0"
+cargo_metadata = "0.12.1"
+chrono = { version = "0.4.19", features = ["serde"] }
+diesel = { version = "1.4.5", features = ["chrono", "serde_json"] }
+diesel_derives = { version = "1.4.1" }
+rand = "0.8.1"
+serde = { version = "1.0.118", features=["derive"] }
+serde_json = "1.0.60"
 thiserror = "1.0.22"
 toml = "0.5.7"
 uuid64rs = { version = "0.0.11", path = "../Uuid64rs" }
